# cloudseven-agent

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
data/: bookings.json  flights.json  loyalty.json
data/policies/: baggage.md  cancellation.md  pets.md  special_assistance.md
docs/: README.md
docs/phase-notes/: phase1-observations.md  phase2-observations.md
scripts/: chat.py  seed_data.py
src/cloudseven/: __init__.py  config.py  logging_config.py
src/cloudseven/agent/: __init__.py  chatbot.py  prompts.py
src/cloudseven/domain/: __init__.py  exceptions.py  models.py
src/cloudseven/llm/: __init__.py  anthropic_client.py  base.py  factory.py  ollama_client.py
src/cloudseven/repositories/: __init__.py  base.py  factory.py  json_repos.py
src/cloudseven/tools/: executor.py  functions.py  schemas.py
tests/unit/: conftest.py  test_tool_executor.py  test_tool_functions.py
