[project]
name = "cloudseven-agent"
version = "0.1.0"
description = "Agentic customer-service chatbot for CloudSeven Airlines (learning project)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Riyon" }]
license = { text = "MIT" }

dependencies = [
    # LLM clients
    "ollama>=0.3.0",
    # Config & validation
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    # Logging
    "structlog>=24.1",
]

[project.optional-dependencies]
# Installed in Phase 2 onwards. Run: pip install -e ".[phase2]"
phase2 = [
    "anthropic>=0.39",
]
phase3 = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
]
phase4 = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
phase5 = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]
phase6 = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
